--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,14 +7,17 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" href="stylesheets/index.css">
   <link rel="stylesheet" href="stylesheets/navbar.css">
+  <link href="https://fonts.googleapis.com/css?family=Cinzel|Unica+One" rel="stylesheet">
 </head>
 <body>
+
   <!-- Navbar begins-->
   <div class="navbar-mvp">
     <!-- Logo -->
-    <a href="/" class="navbar-mvp-brand">
+   <a href="/" class="navbar-mvp-brand">
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2d/Airplane_silhouette_red.svg/1024px-Airplane_silhouette_red.svg.png" alt="logo">
     </a>
+    
 
     <!-- Right Navigation -->
     <div class="navbar-mvp-right hidden-xs hidden-sm">
@@ -23,5 +27,28 @@
     </div>
   <!-- navbar ends -->
   </div>
+
+
+<div id="videoDiv"> 
+<div id="videoBlock">   
+ <video class="visible-desktop" id="hero-vid" autoplay loop muted>
+    <source src="bg-video.mp4" type="video/mp4">
+</video> 
+<div id="videoMessage">
+<div class="centered"><h1><b>Welcome to FlightMode</b></h1></div>
+  </div>
+</div>
+</div>
+</div>
+
+
+
+
+  
+
+
+
+
+
 </body>
 </html>
